Settings.java now uses List.of() instead of Arrays.asList()